--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Face Perception Study</title>
-  <script src="https://unpkg.com/jspsych@7.3.3/dist/jspsych.js"></script> type="module"></script>
-  <script src="https://unpkg.com/@jspsych/plugin-html-button-response@1.2.0"></script> type="module"></script>
-  <script src="https://unpkg.com/@jspsych/plugin-image-keyboard-response@1.2.0"></script> type="module"></script>
-  <script src="https://unpkg.com/@jspsych/plugin-survey-multi-choice@1.2.0"></script> type="module"></script>
+  <script src="https://unpkg.com/jspsych@7.3.3/dist/jspsych.js" type="module"></script>
+  <script src="https://unpkg.com/@jspsych/plugin-html-button-response@1.2.0" type="module"></script>
+  <script src="https://unpkg.com/@jspsych/plugin-image-keyboard-response@1.2.0" type="module"></script>
+  <script src="https://unpkg.com/@jspsych/plugin-survey-multi-choice@1.2.0" type="module"></script>
   <link href="https://unpkg.com/jspsych@7.3.3/css/jspsych.css" rel="stylesheet" />
   <style>
     body {background-color: #f8f8f8;}
@@ -140,3 +140,4 @@
   jsPsych.run([welcome, trial_procedure, end_message]);
 </script>
 </html>
+
